# ros2-perf-multihost

./: .dockerignore  .gitignore  README.md
config/: DEFAULT_RMW_ZENOH_ROUTER_CONFIG.json5  DEFAULT_RMW_ZENOH_SESSION_CONFIG.json5
docker/: Dockerfile  README.md  compose.yaml
docker_base/: Dockerfile
examples/multihost_example/: multihost_example.json  multihost_example_raw.json
examples/rpi_example/: five_hosts.json  four_hosts.json  one_host.json  simple_example.json  three_hosts.json  triple_example.json  triple_hosts.json  triple_hosts_ver2.json  two_hosts.json
examples/topology_example/: topology_example.json
intermediate_node/: CMakeLists.txt
intermediate_node/src/: intermediate_node.cpp
manager_scripts/: README.md  distribute_exec_scripts.sh  generate_exec_scripts.py  manage_rest_servers.sh  manager_scripts.py  operate_zenoh_router.sh  rest_server.py  start_all_servers.sh  start_docker_scripts.py  start_exec_scripts.py  start_scripts.py  start_servers.sh  start_zenoh_router.sh  stop_servers.sh
manager_scripts/generate_exec/: __init__.py  metadata.py  paths.py  script_generation.py  validation.py
node_options/: CMakeLists.txt
node_options/include/node_options/: cli_options.hpp
node_options/src/: cli_options.cpp
node_options_intermediate/: CMakeLists.txt
node_options_intermediate/include/node_options_intermediate/: cli_options.hpp
node_options_intermediate/src/: cli_options.cpp
parse_json/: build_pi0.log.remote  build_pi1.log.remote  build_pi2.log.remote  copy_files_to_rpis.sh  distribute_docker_images.sh  distribute_exec_scripts.sh  generate_dockerfiles.py  generate_exec_scripts.py  generate_scripts.py
parse_json_to_dockerfiles/: parse_json.py
performance_test/: README.md  all_latency.py  analyzer.py  clear_log.sh  monitor_docker.py  monitor_proc.py  performance_test.py  runner.py  throughput_calc.py  two_nodes_latency.py  zenoh_runtime.py
performance_test/fastdds/five/results/: raw_all_payloads_summary.csv
performance_test/fastdds/four/results/: raw_all_payloads_summary.csv
performance_test/fastdds/one/results/: raw_all_payloads_summary.csv
performance_test/fastdds/results/: raw_all_payloads_host_usage_summary.csv  raw_all_payloads_summary.csv
performance_test/fastdds/results/raw_262144B/: host_runs_usage_262144B.csv  host_usage_summary_262144B.csv  throughput_262144B.csv  total_latency_262144B.csv
performance_test/fastdds/three/results/: raw_all_payloads_summary.csv
performance_test/fastdds/two/results/: raw_all_payloads_summary.csv
performance_test/five/results/: raw_all_payloads_summary.csv
performance_test/five/results/raw_1048576B/: host_runs_usage_1048576B.csv  host_usage_summary_1048576B.csv  throughput_1048576B.csv  total_latency_1048576B.csv
performance_test/five/results/raw_262144B/: host_runs_usage_262144B.csv  host_usage_summary_262144B.csv  throughput_262144B.csv  total_latency_262144B.csv
performance_test/four/results/: raw_all_payloads_host_usage_summary.csv  raw_all_payloads_summary.csv
performance_test/four/results/raw_1048576B/: host_runs_usage_1048576B.csv  host_usage_summary_1048576B.csv  throughput_1048576B.csv  total_latency_1048576B.csv
performance_test/one/results/: raw_all_payloads_summary.csv
performance_test/three/results/: raw_all_payloads_summary.csv
performance_test/two/results/: raw_all_payloads_host_usage_summary.csv  raw_all_payloads_summary.csv
publisher_node/: CMakeLists.txt
publisher_node/msg/: PerformanceHeader.msg
publisher_node/src/: publisher_node.cpp
remote_hosts_scripts/: README.md  monitor_psutil.py  rest_server.py  start_exec_scripts.py
ros2_node_impl_ws/: .gitignore  README.md
ros2_node_impl_ws/logs/pub1_log/: metadata.txt  topic1_log.txt
ros2_node_impl_ws/src/ros2_perf_multihost_nodes/: CMakeLists.txt  package.xml
ros2_node_impl_ws/src/ros2_perf_multihost_nodes/include/node_options/: cli_options.hpp
ros2_node_impl_ws/src/ros2_perf_multihost_nodes/include/node_options_intermediate/: cli_options.hpp
ros2_node_impl_ws/src/ros2_perf_multihost_nodes/launch/: all_nodes_readme.launch.py  intermediate.launch.py  publisher.launch.py  subscriber.launch.py
ros2_node_impl_ws/src/ros2_perf_multihost_nodes/src/: intermediate_node.cpp  publisher_node.cpp  subscriber_node.cpp
ros2_node_impl_ws/src/ros2_perf_multihost_nodes/src/node_options/: cli_options.cpp
ros2_node_impl_ws/src/ros2_perf_multihost_nodes/src/node_options_intermediate/: cli_options.cpp
ros2_node_impl_ws/zenoh_config/: DEFAULT_RMW_ZENOH_SESSION_CONFIG.json5
subscriber_node/: CMakeLists.txt
subscriber_node/src/: subscriber_node.cpp
topology_example/: README.md  simple.json
topology_example/wip/rpi_example/: one_host.json  triple_hosts.json  triple_hosts_ver2.json
(+7682 files in other folders)
