<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_perf_multihost_nodes</name>
  <version>0.0.0</version>
  <description>Template implementations of configurable ROS 2 publisher, subscriber, and intermediate nodes used in the ros2-perf-multihost evaluation framework.</description>
  <maintainer email="takasehideki@hal.ipc.i.u-tokyo.ac.jp">takasehideki</maintainer>
  <author>tropical-summer</author>
  <author>ts5-25</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>cxxopts</depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
